Update Installing instructions - Explain where to find artifacts, contracts, and examples - How to set env var - Add contracts directory. I'd forgotten it.
using.rst
- Add rST target to the Artifact Directory section
-- Used by hyperlink in installing.rst

simpleth.py
- Refactor two constants with ABSTRACT_DIR to ABSTRACTS_DIR
-- This aligns with directory name
- Updates several other files

buildall.bat
- Split out a command to build dist and wheel
-- Realize I need to run this to look for errors before doing
   the upload

upload.bat
- Just does the twine upload
-- Run this after buildall.bat completes without error.

setup.py
- new version number, v0.1.22
- add contract source files to data_files

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,1 +1,8 @@
-v0.1.16, 6/6/2022 -- Initial release.
+0.1.16, June 6, 2022
+      Initial release.
+
+0.1.22, June 7, 2022
+      Update Installing.rst with contracts directory, rewrite verify directories,
+      rewrite set env var, update confirm installation.
+      Add contracts to package data files.
+      Rename ABSTRACT_DIR constants to ABSTRACTS_DIR to match directory name.
