--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -17,3 +17,6 @@
 
 0.1.25, June 7, 2022
       Edits to wording in Installing.
+
+0.1.26, June 10, 2022
+      Edits to Using.rst about artifacts and contracts directories
