--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -19,4 +19,7 @@
       Edits to wording in Installing.
 
 0.1.26, June 10, 2022
-      Edits to Using.rst about artifacts and contracts directories
+     Edits to Using.rst about artifacts and contracts directories
+
+0.1.27, June 10, 2002
+     Add Type.Final to constants
