--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,40 +1,58 @@
-0.1.16, June 6, 2022
-      Initial release.
+## 0.1.34 - 2022-06-22
 
-0.1.22, June 7, 2022
-      Update Installing.rst with contracts directory, rewrite verify directories,
-      rewrite set env var, update confirm installation.
-      Add contracts to package data files.
-      Rename ABSTRACT_DIR constants to ABSTRACTS_DIR to match directory name.
+     - Test.sol event, Received(), used paramaeter "amountGwei". Should be "amountWei".
+     - New format for CHANGES.TXT
+     - Reverse chronological order for CHANGES.TXT
 
-0.1.23, June 7, 2022
-      Fix RtD Warning, split upload.bat into buildall.bat and upload.bat,
-      Add README.rst to package.
+## 0.1.27 - 2022-06-10
 
-0.1.24, June 7, 2022
-      Forgot to do a makedoc in last version, add new shell session dir listing
-      showing contracts dir in Installing
+     - Add Type.Final to constants
 
-0.1.25, June 7, 2022
-      Edits to wording in Installing.
+## 0.1.26 - 2022-06-10
 
-0.1.26, June 10, 2022
-     Edits to Using.rst about artifacts and contracts directories
+     - Edits to Using.rst about artifacts and contracts directories
 
-0.1.27, June 10, 2022
-     Add Type.Final to constants
+## 0.1.33 - 2022-06-10
 
-0.1.28, June 10, 2022
-     Do not package TestNeverDeployed contract
+     - Wording changes to documentation for accuracy and readability
 
-0.1.29, June 10, 2022
-     Clean up pylint complaints
+## 0.1.32 - 2022-06-10
 
-0.1.31, June 10, 2022
-     Updates to build step
+     - Installing doc update for readability
 
-0.1.32, June 10, 2022
-     Installing doc update for readability
+## 0.1.31 - 2022-06-10
 
-0.1.33, June 22, 2022
-     Wording changes to documentation for accuracy and readability
+     - Updates to build step
+
+## 0.1.29 - 2022-06-10
+
+     - Clean up pylint complaints
+
+## 0.1.28 - 2022-06-10
+
+     - Do not package TestNeverDeployed contract
+
+## 0.1.25 - 2022-06-07
+
+      - Edits to wording in Installing.
+
+## 0.1.24 - 2022-06-07
+
+      - Forgot to do a makedoc in last version, add new shell session dir listing
+        showing contracts dir in Installing
+
+## 0.1.23 - 2022-06-07
+
+      - Fix RtD Warning, split upload.bat into buildall.bat and upload.bat.
+      - Add README.rst to package.
+
+## 0.1.22 - 2022-06-07
+
+      - Update Installing.rst with contracts directory, rewrite verify directories,
+        rewrite set env var, update confirm installation.
+      - Add contracts to package data files.
+      - Rename ABSTRACT_DIR constants to ABSTRACTS_DIR to match directory name.
+
+## 0.1.16 - 2022-06-06
+
+      - Initial release.
