--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.35 - 2022-06-22
+
+     - Add requirement for attributedict and hexbytes. Used by web3.py
+
 ## 0.1.34 - 2022-06-22
 
      - Test.sol event, Received(), used paramaeter "amountGwei". Should be "amountWei".
