--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,12 @@
-## 0.1.35 - 2022-06-22
+## 0.1.36 - 2022-06-26
+
+     - Add attributedict and hexbytes to install_requires
+
+## 0.1.35 - 2022-06-26
 
      - Add requirement for attributedict and hexbytes. Used by web3.py
 
-## 0.1.34 - 2022-06-22
+## 0.1.34 - 2022-06-26
 
      - Test.sol event, Received(), used paramaeter "amountGwei". Should be "amountWei".
      - New format for CHANGES.TXT
