Add Hints about sending ether - submit_trx() add HINT16 (forget to send ether) and HINT16 (Decmial to int) - send_ether() add HINT5 (Decimal to int) - fix a couple of missing whitespaces
setup.py
- new version v0.1.37

CHANGES.txt
- new version

docs\build\conf.py
- new version

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.37 - 2022-06-27
+
+     - Add missing HINTS when sending ether: forgetting to include or to cast to int.
+
 ## 0.1.36 - 2022-06-26
 
      - Add attributedict and hexbytes to install_requires
