Update docstrings about output filenames using the contract name. - Don't assume name of contract in .sol file matches   the .sol filename. - I forgot this. Needed a reminder.
setup.py
- new version v0.1.39

CHANGES.txt
- new version

docs\build\conf.py
- new version

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.38 - 2022-07-02
+
+     - Update docstrings about output filenames using the contract name.
+
 ## 0.1.38 - 2022-06-27
 
      - Add HINT about not using a contract to run deploy().
