--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,8 @@
-## 0.1.38 - 2022-07-02
+## 0.1.40 - 2022-07-02
+
+     - Remove DEBUG print statements from compile.py
+
+## 0.1.39 - 2022-07-02
 
      - Update docstrings about output filenames using the contract name.
 
