--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.41 - 2022-07-05
+
+     - Update connect() to add an optional address parameter
+
 ## 0.1.40 - 2022-07-02
 
      - Remove DEBUG print statements from compile.py
