Get version numbers in sync - dist file, setup.py, conf.py, CHANGES.txt weren't in sync. - No code changes.
setup.py
- new version v0.1.41

CHANGES.txt
- new version

docs\build\conf.py
- new version

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,6 @@
 ## 0.1.41 - 2022-07-05
 
-     - Update connect() to add an optional address parameter
+     - Update connect() to add an optional address parameter.
 
 ## 0.1.40 - 2022-07-02
 
