Add event_args to EventSearch()
simpleth.py
- Add parameter to init() to search for event args and values
- Update class and method docstrings

test_eventsearch.py
- Add test cases

using.rst
- Add section about searching for events using event args

Update to 0.1.42
- setup.py
- conf.py

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.42 - 2022-08-06
+
+     - Add event_args to EventSearch() as an optional parameter.
+
 ## 0.1.41 - 2022-07-05
 
      - Update connect() to add an optional address parameter.
