--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.43 - 2022-08-06
+
+     - git push failed. Retry to push 0.1.42.
+
 ## 0.1.42 - 2022-08-06
 
      - Add event_args to EventSearch() as an optional parameter.
