using.rst - Add notes section to explain the example of using event args. - Should've put that in the previous release. I forgot to write it.
V0.1.44
- Updated in CHANGES.txt
- Updated in conf.py
- Updated in setup.py

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.44 - 2022-08-06
+
+     - Add notes section to Search for events with event arguments
+
 ## 0.1.43 - 2022-08-06
 
      - git push failed. Retry to push 0.1.42.
