--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.46 - 2022-09-19
+
+     - Rename SimplEthError() to SimplethError()
+
 ## 0.1.45 - 2022-08-06
 
      - Fix missing colon in notes for searching with event args
