Redid EventSearch.get_old() args - get_old(0) searches most recently mined block, get_old(-1) searches   two most recently mined blocks, get_old(-2) searches three most   recently mined blocks, etc. - get_old() still searches most recently mined block; same as get_old(0). - Got rid of get_old(x) searching from block x to the end of the chain.   Do this with get_old(x, last_block_number). - Allow get_old(0, block_number) to work. Previously, there was a bug where   you could not specify starting at block 0; oldest block allowed was   block 1.
V0.1.47
- Updated in CHANGES.txt
- Updated in conf.py
- Updated in setup.py

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.47 - 2022-09-21
+
+     - Redid EventSearch.get_old() argument values
+
 ## 0.1.46 - 2022-09-19
 
      - Rename SimplEthError() to SimplethError()
