Fix docstrings for class properties. - Use :attr: not :meth: for properties - Sphinx now creates '<property>'' for the HTML link. It was   creating '<property>()''.
V0.1.48
- Updated in CHANGES.txt
- Updated in conf.py
- Updated in setup.py

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.478- 2022-09-21
+
+     - Fix class property docstrings
+
 ## 0.1.47 - 2022-09-21
 
      - Redid EventSearch.get_old() argument values
