Redo EventSearch.get_old() parameter validation testing - Needed to be cleaned up after removing get_old(block_num) in   v0.1.47. - This is easier to read and follow. - Adds another error code, E-030-040, and meant the higher   numbered error codes were all bumped up one.
test_eventsearch.py
- Updated to add the new test case
- Modified to use the new error codes
- Reordered test cases for bad get_old() to match the flow
  of simpleth.get_old() parameter checking.

V0.1.49
- Updated in CHANGES.txt
- Updated in conf.py
- Updated in setup.py

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,8 @@
-## 0.1.478- 2022-09-21
+## 0.1.49- 2022-09-22
+
+     - Redo EventSearch.get_old() parameter validation testing
+
+## 0.1.48- 2022-09-21
 
      - Fix class property docstrings
 
