Fix two bugs in get_old() parameter testing - get_old(-x) had a bad test. Since the relative number of blocks   is zero-based (0 means the latest block in the chain) the   smallest value of x is -<latest_block - 1>. The parameter test   allowed -<latest_block>. - get_old(0, n) is allowed. It was raising exception if from_block   was 0.
V0.1.51
- Updated in CHANGES.txt
- Updated in conf.py
- Updated in setup.py

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.501 2022-09-22
+
+     - Fix two bugs in EventSearch.get_old() parameter testing
+
 ## 0.1.50- 2022-09-22
 
      - Fix four typos in EventSearch.get_old() docstrings
