--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,8 @@
-## 0.1.501 2022-09-22
+## 0.1.52 2022-09-22
+
+     - Rename Blockchain().balance() to balance_of()
+
+## 0.1.51 2022-09-22
 
      - Fix two bugs in EventSearch.get_old() parameter testing
 
