--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.55 2022-10-04
+
+     - Move __all__ from simpleth.py to __init__.py
+
 ## 0.1.54 2022-10-04
 
      - Remove unneeded 'else' since 'if' raises an exception
