simpleth.py - Add revert_msg to call_fcn() error C-010-040 - fix closing bracket indentation
Test.sol
- Rename revertTransaction() to revertFunction() and
  change its revert text
- Add requireFailsFunction()
- These changes allow better testing of transactions
  and functions that revert with a message.

test_contract.py
- Update test case to use new name, revertFunction()

test_test.py
- Four test cases that test:
-- revert when called as function
-- revert when called as transaction
-- require when called as function
-- require when called as transaction

V0.1.56
- Updated in CHANGES.txt
- Updated in conf.py
- Updated in setup.py

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,8 @@
-## 0.1.55 2022-10-04
+## 0.1.56 2022-10-26
+
+     - Add revert_msg to Contract().call_fcn() error C-010-040
+
+ ## 0.1.55 2022-10-04
 
      - Move __all__ from simpleth.py to __init__.py
 
