Add test cases for byte data type
Test.sol
- Create storeBytes() to test bytes4, bytes32, and bytes
- Create BytesStored() event to emit
- Create getBytes() to test returning bytes values

test_test.py
- Add test_storeBytes() to test storeBytes() trx and
  BytesStored()
- Add test_getBytes() to test getBytes()

V0.1.57
- Updated in CHANGES.txt
- Updated in conf.py
- Updated in setup.py

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.57 2022-11-05
+
+     - Add test cases for Solidity bytes data type
+
 ## 0.1.56 2022-10-26
 
      - Add revert_msg to Contract().call_fcn() error C-010-040
