--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.58 2022-11-06
+
+     - Add section to explain using bytes data and fix missing artifacts
+
 ## 0.1.57 2022-11-05
 
      - Add test cases for Solidity bytes data type
