--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.61 2022-11-06
+
+     - Add section about using bytearray as arg to store bytes
+
 ## 0.1.60 2022-11-06
 
      - Add hint about passing too many bytes
