--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.62 2022-11-09
+
+     - Improve handling of transactions that revert()
+
 ## 0.1.61 2022-11-06
 
      - Add section about using bytearray as arg to store bytes
