--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.63 2022-11-09
+
+     - Add testing of assert()
+
 ## 0.1.62 2022-11-09
 
      - Improve handling of transactions that revert()
