--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.64 2022-11-09
+
+     - Add hint to C-010-020 about calling a trx with call_fcn()
+
 ## 0.1.63 2022-11-09
 
      - Add testing of assert()
