--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+## 0.1.65 2022-11-09
+
+     - Improve SimplethError class overview docstrings and example code
+
 ## 0.1.64 2022-11-09
 
      - Add hint to C-010-020 about calling a trx with call_fcn()
